svd gap fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,10 @@
     gap: 25px;
 }
 
+.gap-26 {
+    gap: 26px;
+}
+
 .gap-10 {
     gap: 10px;
 }
